<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_user_salt"
        android:inputType="text"
        android:key="user_salt"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_salt"
        android:dependency="legacy"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_iterations"
        android:inputType="number"
        android:key="iterations"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_iterations"
        android:dependency="legacy"/>

    <CheckBoxPreference
        android:defaultValue="@string/pref_default_legacy"
        android:key="legacy"
        android:title="@string/pref_title_legacy"
        android:disableDependentsState="true"/>

</PreferenceScreen>
